Properly output 'transparent' for cssText. While at it, also output rgba values, as we parse them (though we can't render them yet).

This centralization will also makes this easier to fully port to Qt4.
BUG:130225

svn path=/branches/KDE/3.5/kdelibs/; revision=559918